--- a/ProjetoBootstrap/icones.html
+++ b/ProjetoBootstrap/icones.html
@@ -42,21 +42,32 @@
         <br>
 
         <p style="color: orange; font-size: 50px">
-            <span class="glyphicon glyphicon-music"
+            <span class="glyphicon glyphicon-music"></span>
         </p>
 
-        <button type="button" class="btn btn-default">
-            <span class="glyphicon glyphicon-refresh"></span>
-            Atualizar
+        <form action="icones.html">
+            <button type="submit" class="btn btn-default" href="icones.html">
+                <span class="glyphicon glyphicon-refresh"></span>
+                Atualizar
 
-        </button>
+            </button>
+
+        </form>
+
 
         <br>
         <h4>USe icones</h4>
         <div class="btn-toolbar">
             <div class="btn-group">
-                <button type="button" class="btn btn-default">OK</button>
-                <button type="button" class="btn btn-default">OK</button>
+                <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-play"></span>
+                </button>
+                <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-pause"></span>
+                </button>
+                <button type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-stop"></span>
+                </button>
 
             </div>
         </div>
