--- a/projeto-inicial-spotify/index.html
+++ b/projeto-inicial-spotify/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Música para todos - Spotify</title>
+    <link rel="icon" href="imagens/favicon.png">
 
     <!-- Bootstrap -->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +21,53 @@
   </head>
   <body>
 
-    
+    <nav class="navbar navbar-fixed-top navbar-inverse navbar-transparente">
+      <div class="container">
 
+        <!-- header -->
+        <div class="navbar-header">
+          <!-- botão toogle -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#barra-navegacao">
+            <span class="sr-only">Alternar navegação</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html" class="navbar-brand">
+
+            <span class="img-logo">Spotify</span>
+          </a>
+        </div>
+        <!-- nav -->
+        <div class="collapse navbar-collapse" id="barra-navegacao">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="">Premium</a></li>
+            <li><a href="">Ajuda</a></li>
+            <li><a href="">Baixar</a></li>
+            <li><a href="">Inscrever-se</a></li>
+            <li><a href="">Entrar</a></li>
+          </ul>
+
+        </div>
+
+
+      </div><!-- /container -->
+
+    </nav><!-- nav -->
+
+    <div class="capa">
+      <div class="texto-capa">
+        <h1> Música Para todos</h1>
+        <a href="" class="btn btn-roxo btn-custom btn-lg">Aproveite o Spotify Free</a>
+        <a href="" class="btn btn-branco btn-custom btn-lg">Obter o Spotify</a>
+      </div>
+    </div>
+
+    <!-- conteudo -->
+    <section id="servicos">
+      <div cl
+
+    </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
